@@ -8,6 +8,7 @@ const { IDS } = require('../utils')
 const ConnectionError = require('../error/connection-error')
 const shared = require('../shared')
 const clone = require('rfdc/default')
+const { MSSQLError } = require('../error')
 
 /**
  * Class ConnectionPool.
@@ -66,6 +67,14 @@ class ConnectionPool extends EventEmitter {
     if (/^(.*)\\(.*)$/.exec(this.config.server)) {
       this.config.server = RegExp.$1
       this.config.options.instanceName = RegExp.$2
+    }
+
+    if (typeof this.config.options.useColumnNames !== 'undefined' && this.config.options.useColumnNames !== true) {
+      const ex = new MSSQLError('Invalid options `useColumnNames`, use `arrayRowMode` instead')
+      if (typeof callback === 'function') {
+        return setImmediate(callback, ex)
+      }
+      throw ex
     }
 
     if (typeof callback === 'function') {
