@@ -44,6 +44,7 @@ describe('msnodesqlv8', function () {
       sql.connect(cfg, done)
     })
 
+    it('config validation', done => TESTS['config validation'](done))
     it('value handler', done => TESTS['value handler'](done))
     it('stored procedure (exec)', done => TESTS['stored procedure']('execute', done))
     it('stored procedure (batch)', done => TESTS['stored procedure']('batch', done))
